2010-05-11  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Made player thread more resilient to adverse
	  network/processor conditions - intermittent connections
	  should no longer leave the player hanging whilst indicating
	  it is still playing.

2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Fixed missing Save call in RemoveAllTags

2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Implemented IDisposable for proper clean-up of
	  file handles

2010-05-08  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Actually fixed the bug in the previous revision!
	  Original fix wasn't a fix!

2010-05-08  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Fixed array index out of bounds error when
	  SetTag was called with a non-array tag

2010-05-08  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlaylistWriter.cs: Added Playlist parameter to Write
	  functions as they are now static rather than linked to a
	  playlist object intrinsically

	* OggPlaylist.cs: Implemented Constructor, Deconstructor,
	  various property interfaces and player Assign/UnAssign
	  functions
	Added PlaylistStateChanged event and internal support function

	* MiscStuff.cs: Added OggPlaylistState enumeration &
	  supporting GetEnumString
	Tidied up some intellisense comments

2010-05-07  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlaylistWriter.cs: Rearranged OggPlaylistWriter - now a
	  static class. Read & Write functions take a format argument.

	* OggPlaylist.cs: Implemented IEnumerable for OggPlaylist
	Added OggPlaylistEnumerator (Implementing IEnumerable)
	First phase of OggPlaylist code

	* MiscStuff.cs: Added OggPlaylist format enumeration and
	  supporting GetEnumString

	* OggPlayer.cs: Tidied some declarations to improve code
	  readability

2010-05-03  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* DragonOgg.csproj: Updated version info
