@@ -1,3 +1,10 @@
+2010-05-14  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
+	* OggPlaylist.cs: Added Add & Remove functions
+
+	* OggPlayer.cs: Bugfix to sort regression causing
+	  non-detection of EOFs
+
 2010-05-11  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
 	* OggPlayer.cs: Made player thread more resilient to adverse
